exports[`test Colored field 1`] = `
<_class
  style={
    Object {
      "background": "#BBDEFB",
    }
  } />
`;

exports[`test Dark tone class + light tone 1`] = `
<_class
  dark={true}
  tone="light" />
`;

exports[`test Dark tone class + light tone class 1`] = `
<_class
  className="pe-light-tone"
  dark={true} />
`;

exports[`test No options 1`] = `
<div
  className="pe-search pe-search--inset   ">
  <div
    className="pe-search__content">
    <TextField
      onChange={[Function]} />
  </div>
</div>
`;

exports[`test Option: class 1`] = `
<div
  className="pe-search pe-search--inset   class-x">
  <div
    className="pe-search__content">
    <TextField
      onChange={[Function]} />
  </div>
</div>
`;

exports[`test Option: className 1`] = `
<div
  className="pe-search pe-search--inset   className-x">
  <div
    className="pe-search__content">
    <TextField
      onChange={[Function]} />
  </div>
</div>
`;

exports[`test Option: element 1`] = `
<a
  className="pe-search pe-search--inset   ">
  <div
    className="pe-search__content">
    <TextField
      onChange={[Function]} />
  </div>
</a>
`;

exports[`test Option: id 1`] = `
<div
  className="pe-search pe-search--inset   "
  id="id-x">
  <div
    className="pe-search__content">
    <TextField
      onChange={[Function]} />
  </div>
</div>
`;

exports[`test Option: textfield 1`] = `
<Search
  after={<Shadow />}
  textfield={
    Object {
      "label": "Search",
    }
  } />
`;

exports[`test Option: textfield, buttons (JSX) 1`] = `<_class />`;

exports[`test Option: textfield, buttons (hyperscript) 1`] = `<_class />`;

exports[`test Option: textfield, buttons 1`] = `<_class />`;

exports[`test Option: textfield, buttons, fullWidth 1`] = `
<_class
  fullWidth={true} />
`;

exports[`test Theme (JSX) 1`] = `
<_class
  className="tests-search-themed-search"
  tone="dark" />
`;

exports[`test Theme -- dark tone class 1`] = `
<_class
  className="tests-search-themed-search"
  dark={true} />
`;

exports[`test Theme 1`] = `
<_class
  className="tests-search-themed-search"
  tone="dark" />
`;

exports[`test With search results 1`] = `<_class />`;
